--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "scripts": {
     "serve:stage": "NODE_ENV=staging node index.js",
     "serve:prod": "NODE_ENV=production node index.js"
+  },
+  "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
